k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k-query
  labels:
    name: k-query
    app: k-query
